[package]
name = "training_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.14.5"
rand = "0.8.5"
rayon = "1.10.0"
trie-rs = "0.4.2"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
